# Laboratorio2_PA

./: CMakeLists.txt  Cliente.cpp  Cliente.h  Comentario.cpp  Comentario.h  Compras.cpp  Compras.h  Controlador.cpp  Controlador.h  ControladorComentario.cpp  ControladorComentario.h  ControladorCompras.cpp  ControladorCompras.h  ControladorProducto.cpp  ControladorProducto.h  ControladorPromocion.cpp  ControladorPromocion.h  ControladorUsuario.cpp  ControladorUsuario.h  DTProducto.h  DTprod.h  DTpromocion.h  Estructuras.cpp  Estructuras.h  Fabrica.cpp  Fabrica.h  IControlador.h  IControladorComentario.h  IControladorCompras.h  IControladorProducto.h  IControladorPromocion.h  IControladorUsuario.h  Interfaces.h  Producto.cpp  Producto.h  ProductoCompras.cpp  ProductoCompras.h  Promocion.cpp  Promocion.h  PromocionProducto.cpp  (+7 more)
ICollection/: Integer.cpp
ICollection/interfaces/: ICollection.h
